# bubbawonk-reprap

./: README.txt
CAD/Prusa_Parts/: wade-large-gear.STEP  wade-small-gear.STEP  wade-tension-plate.STEP  wade.STEP  x-carriage.STEP  x-end-idler.STEP  x-end-motor.STEP
CAD/lasercut_frame/: Prusa_Air_2.0.dxf
FiveD_GCode_Interpreter/: AUTHORS  FiveD_GCode_Interpreter.cpp  FiveD_GCode_Interpreter.h  Makefile.am  NOTES  README  cartesian_dda.cpp  cartesian_dda.h  configure.ac  extruder.cpp  global.h  process_g_code.cpp  process_g_code.h
blueprint/Prusa_parts/: x-end-motor_v2.SLDDRW
electronics/Gen2OnABoard/: Gen2OnABoard-page1.sch
electronics/SanguinoOnABreadBoard/: SanguinoBB.fzz
gEDA_pcb_files/: .Gen2OnABoard-v0.6png  Gen2OnABoard.gsch2pcb  Gen2OnABoard.pcb
